force-app/main/default/objects/Education__c/fields/Stu_grade__c.field-meta.xml
<CustomField>
    <fullName>Stu_grade__c</fullName>
    <label>Stu_grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>