force-app/main/default/objects/Education__c/fields/Stu_ID__c.field-meta.xml
<CustomField>
    <fullName>Stu_ID__c</fullName>
    <label>Stu ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>