force-app/main/default/objects/Education__c/fields/Stu_Name__c.field-meta.xml
<CustomField>
    <fullName>Stu_Name__c</fullName>
    <label>Stu Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>