force-app/main/default/objects/Education__c/recordTypes/Primary_record_type.recordType-meta.xml
<RecordType>
    <fullName>Primary_record_type</fullName>
    <active>true</active>
    <label>Primary record type</label>
</RecordType>