force-app/main/default/objects/Education__c/recordTypes/Secondary_record_type.recordType-meta.xml
<RecordType>
    <fullName>Secondary_record_type</fullName>
    <active>true</active>
    <label>Secondary record type</label>
</RecordType>